<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.myapplication.MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="center"
        android:src="@drawable/officels" />

    <RelativeLayout
        android:id="@+id/logocontent"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <Button
            android:id="@+id/toplogo"
            android:background="@drawable/logo"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:onClick="contact_menu"
            android:orientation="vertical"
            />

            <LinearLayout
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toplogo"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:visibility="invisible"

                >
                <Button
                    android:background="@drawable/home"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:onClick="home"
                    android:layout_margin="15dp"/>
                <Button
                    android:background="@drawable/phone"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:onClick="phone"
                    android:layout_margin="15dp"/>
                <Button
                    android:background="@drawable/mail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:onClick="mail"
                    android:layout_margin="15dp"/>

            </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logocontent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name" />

        <TextView
            android:id="@+id/adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_name"

            android:text="@string/adress" />

        <TextView
            android:id="@+id/tele"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adress"
            android:text="@string/tele" />

        <TextView
            android:id="@+id/openhours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tele"
            android:text="@string/open" />

        <TextView
            android:id="@+id/www"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/openhours"
            android:text="@string/www" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/www"
            android:text="@string/email" />

    </LinearLayout>
</RelativeLayout>

